--- a/.github/workflows/release-drafter.yml
+++ b/.github/workflows/release-drafter.yml
@@ -1,6 +1,6 @@
 # Draft the next release notes
 #
-# This workflow is run to update the next releases notes as pull requests are
+# This workflow is run to update the next release notes as pull requests are
 # merged into the main branch. The configuration file is located at
 # `.github/release-drafter.yml`.
 #
