--- a/ci/requirements/docs.yml
+++ b/ci/requirements/docs.yml
@@ -14,6 +14,7 @@ dependencies:
     # Optional dependencies
     - contextily
     - geopandas
+    - panel
     - rioxarray
     # Development dependencies (general)
     - build
