--- a/ci/requirements/docs.yml
+++ b/ci/requirements/docs.yml
@@ -1,10 +1,9 @@
 name: pygmt
 channels:
     - conda-forge
-    - defaults
+    - nodefaults
 dependencies:
     # Required dependencies
-    - pip
     - gmt=6.4.0
     - numpy>=1.21
     - pandas
@@ -14,11 +13,12 @@ dependencies:
     # Optional dependencies
     - contextily
     - geopandas
+    - ipython
     - rioxarray
     # Development dependencies (general)
     - build
-    - ipython
     - make
+    - pip
     # Dev dependencies (building documentation)
     - myst-parser
     - sphinx
