Use YAML multiline string syntax

--- a/.github/workflows/ci_tests.yaml
+++ b/.github/workflows/ci_tests.yaml
@@ -67,7 +67,11 @@ jobs:
             optional-packages: ''
           - python-version: '3.11'
             numpy-version: '1.24'
-            optional-packages: 'contextily\n geopandas\n ipython\n rioxarray'
+            optional-packages: |
+              contextily
+              geopandas
+              ipython
+              rioxarray
     timeout-minutes: 30
     defaults:
       run:
