--- a/.github/workflows/ci_doctests.yaml
+++ b/.github/workflows/ci_doctests.yaml
@@ -43,10 +43,28 @@ jobs:
       - name: Setup Micromamba
         uses: mamba-org/provision-with-micromamba@v15
         with:
-          environment-file: "ci/requirements/doctests.yml"
+          environment-name: pygmt
+          environment-file: false
+          channels: conda-forge,nodefaults
           extra-specs: |
             python=3.11
             gmt=6.4.0
+            numpy>=1.21
+            pandas
+            xarray
+            netCDF4
+            packaging
+            contextily
+            geopandas
+            ipython
+            rioxarray
+            build
+            make
+            pip
+            pytest-doctestplus
+            pytest-mpl
+            pytest>=6.0
+            sphinx-gallery
 
       # Show installed pkg information for postmortem diagnostic
       - name: List installed packages
