Do not specify the minimum package version

--- a/.github/workflows/ci_docs.yml
+++ b/.github/workflows/ci_docs.yml
@@ -76,7 +76,7 @@ jobs:
           extra-specs: |
             python=3.11
             gmt=6.4.0
-            numpy>=1.21
+            numpy
             pandas
             xarray
             netCDF4
