--- a/.github/workflows/ci_tests.yaml
+++ b/.github/workflows/ci_tests.yaml
@@ -122,7 +122,7 @@ jobs:
             pytest-cov
             pytest-doctestplus
             pytest-mpl
-            pytest>=6.0
+            pytest
             sphinx-gallery
 
       # Download cached remote files (artifacts) from GitHub
