CI: Use mamba-org/provision-with-micromamba to setup micromamba (#2435)
Co-authored-by: Wei Ji <23487320+weiji14@users.noreply.github.com>

--- a/.github/workflows/ci_tests.yaml
+++ b/.github/workflows/ci_tests.yaml
@@ -67,7 +67,12 @@ jobs:
             optional-packages: ''
           - python-version: '3.11'
             numpy-version: '1.24'
-            optional-packages: 'contextily geopandas ipython rioxarray'
+            optional-packages: |
+              contextily
+              geopandas
+              ipython
+              rioxarray
+
     timeout-minutes: 30
     defaults:
       run:
@@ -93,32 +98,32 @@ jobs:
           # fetch all history so that setuptools-scm works
           fetch-depth: 0
 
-      # Install Mambaforge with conda-forge dependencies
-      - name: Setup Mambaforge
-        uses: conda-incubator/setup-miniconda@v2.2.0
+      - name: Setup Micromamba
+        uses: mamba-org/provision-with-micromamba@v15
         with:
-          activate-environment: pygmt
-          python-version: ${{ matrix.python-version }}
+          environment-name: pygmt
+          environment-file: false
           channels: conda-forge,nodefaults
-          channel-priority: strict
-          miniforge-version: latest
-          miniforge-variant: Mambaforge
-          mamba-version: "*"
-          run-post: false
-          use-mamba: true
-
-      # Install GMT and other required dependencies from conda-forge
-      - name: Install dependencies
-        run: |
-          mamba install gmt=6.4.0 numpy=${{ matrix.numpy-version }} \
-                        pandas xarray netCDF4 packaging \
-                        ${{ matrix.optional-packages }} \
-                        build dvc make 'pytest>=6.0' \
-                        pytest-cov pytest-doctestplus pytest-mpl sphinx-gallery
-
-      # Show installed pkg information for postmortem diagnostic
-      - name: List installed packages
-        run: mamba list
+          cache-downloads: true
+          cache-env: true
+          extra-specs: |
+            python=${{ matrix.python-version }}
+            gmt=6.4.0
+            numpy=${{ matrix.numpy-version }}
+            pandas
+            xarray
+            netCDF4
+            packaging
+            ${{ matrix.optional-packages }}
+            build
+            dvc
+            make
+            pip
+            pytest
+            pytest-cov
+            pytest-doctestplus
+            pytest-mpl
+            sphinx-gallery
 
       # Download cached remote files (artifacts) from GitHub
       - name: Download remote data from GitHub
