Add tutorial to show interactive data visualization via 'panel' (#2498)
Co-authored-by: Wei Ji <23487320+weiji14@users.noreply.github.com>
Co-authored-by: Dongdong Tian <seisman.info@gmail.com>
Co-authored-by: Michael Grund <23025878+michaelgrund@users.noreply.github.com>
Co-authored-by: Yvonne Fröhlich <yfroe@gpiseis16.gpi.kit.edu>

--- a/.github/workflows/ci_docs.yml
+++ b/.github/workflows/ci_docs.yml
@@ -89,6 +89,7 @@ jobs:
             make
             pip
             myst-parser
+            panel
             sphinx
             sphinx-copybutton
             sphinx-design
