--- a/ci/requirements/docs.yml
+++ b/ci/requirements/docs.yml
@@ -21,6 +21,7 @@ dependencies:
     - pip
     # Dev dependencies (building documentation)
     - myst-parser
+    - panel
     - sphinx
     - sphinx-copybutton
     - sphinx-design
