--- a/.github/workflows/ci_tests_legacy.yaml
+++ b/.github/workflows/ci_tests_legacy.yaml
@@ -71,6 +71,7 @@ jobs:
             ipython
             rioxarray
             build
+            dvc
             make
             pip
             pytest
@@ -94,6 +95,11 @@ jobs:
           touch ~/.gmt/server/gmt_data_server.txt ~/.gmt/server/gmt_hash_server.txt
           ls -lhR ~/.gmt
 
+      # Pull baseline image data from dvc remote (DAGsHub)
+      - name: Pull baseline image data from dvc remote
+        run: |
+          dvc pull pygmt/tests/baseline/test_logo.png --verbose
+          ls -lhR pygmt/tests/baseline/
       # Install the package that we want to test
       - name: Install the package
         run: make install
