--- a/.github/workflows/ci_tests_legacy.yaml
+++ b/.github/workflows/ci_tests_legacy.yaml
@@ -98,8 +98,10 @@ jobs:
       # Pull baseline image data from dvc remote (DAGsHub)
       - name: Pull baseline image data from dvc remote
         run: |
-          dvc pull pygmt/tests/baseline/test_logo.png --verbose
+          # test_logo.png is required by the test_image.py tests
+          dvc pull pygmt/tests/baseline/test_logo.png
           ls -lhR pygmt/tests/baseline/
+          
       # Install the package that we want to test
       - name: Install the package
         run: make install
