--- a/.github/workflows/ci_tests_legacy.yaml
+++ b/.github/workflows/ci_tests_legacy.yaml
@@ -75,6 +75,7 @@ jobs:
             make
             pip
             pytest
+            pytest-doctestplus
             pytest-mpl
 
       # Download cached remote files (artifacts) from GitHub
