--- a/.github/workflows/cache_data.yaml
+++ b/.github/workflows/cache_data.yaml
@@ -33,13 +33,14 @@ jobs:
           # fetch all history so that setuptools-scm works
           fetch-depth: 0
 
+      # Install Micromamba with conda-forge dependencies
       - name: Setup Micromamba
-        uses: mamba-org/provision-with-micromamba@v15
+        uses: mamba-org/setup-micromamba@v1.2.1
         with:
           environment-name: pygmt
           environment-file: false
           channels: conda-forge,nodefaults
-          extra-specs: |
+          create-args: |
             python=3.11
             gmt=6.4.0
             numpy
