--- a/.github/workflows/ci_docs.yml
+++ b/.github/workflows/ci_docs.yml
@@ -73,7 +73,7 @@ jobs:
           environment-file: false
           channels: conda-forge,nodefaults
           cache-downloads: true
-          cache-env: true
+          cache-environment: true
           create-args: |
             python=3.11
             gmt=6.4.0
