--- a/.github/workflows/ci_tests.yaml
+++ b/.github/workflows/ci_tests.yaml
@@ -107,7 +107,7 @@ jobs:
           environment-file: false
           channels: conda-forge,nodefaults
           cache-downloads: true
-          cache-env: true
+          cache-environment: true
           create-args: |
             python=${{ matrix.python-version }}
             gmt=6.4.0
