--- a/.github/workflows/ci_tests_dev.yaml
+++ b/.github/workflows/ci_tests_dev.yaml
@@ -97,7 +97,7 @@ jobs:
           environment-file: false
           channels: conda-forge,nodefaults
           cache-downloads: true
-          cache-env: true
+          cache-environment: true
           create-args: |
             python=3.11
             cmake
