--- a/.github/workflows/ci_doctests.yaml
+++ b/.github/workflows/ci_doctests.yaml
@@ -46,7 +46,10 @@ jobs:
         with:
           environment-name: pygmt
           environment-file: false
-          channels: conda-forge,nodefaults
+          condarc: |
+            channels:
+              - conda-forge
+              - nodefaults
           create-args: |
             python=3.11
             gmt=6.4.0
