--- a/.github/workflows/ci_tests.yaml
+++ b/.github/workflows/ci_tests.yaml
@@ -105,7 +105,10 @@ jobs:
         with:
           environment-name: pygmt
           environment-file: false
-          channels: conda-forge,nodefaults
+          condarc: |
+            channels:
+              - conda-forge
+              - nodefaults
           cache-downloads: true
           cache-environment: true
           create-args: |
