--- a/.github/workflows/ci_tests_dev.yaml
+++ b/.github/workflows/ci_tests_dev.yaml
@@ -95,7 +95,10 @@ jobs:
         with:
           environment-name: pygmt
           environment-file: false
-          channels: conda-forge,nodefaults
+          condarc: |
+            channels:
+              - conda-forge
+              - nodefaults
           cache-downloads: true
           cache-environment: true
           create-args: |
