--- a/.github/workflows/ci_docs.yml
+++ b/.github/workflows/ci_docs.yml
@@ -75,8 +75,8 @@ jobs:
             channels:
               - conda-forge
               - nodefaults
-          cache-downloads: true
-          cache-environment: true
+          cache-downloads: false
+          cache-environment: false
           create-args: |
             python=3.11
             gmt=6.4.0
