--- a/.github/workflows/ci_tests_dev.yaml
+++ b/.github/workflows/ci_tests_dev.yaml
@@ -99,8 +99,8 @@ jobs:
             channels:
               - conda-forge
               - nodefaults
-          cache-downloads: true
-          cache-environment: true
+          cache-downloads: false
+          cache-environment: false
           create-args: |
             python=3.11
             cmake
