--- a/.github/workflows/ci_tests_legacy.yaml
+++ b/.github/workflows/ci_tests_legacy.yaml
@@ -57,7 +57,7 @@ jobs:
         uses: mamba-org/setup-micromamba@v1.2.1
         with:
           environment-name: pygmt
-          environment-file: false
+          environment-file: environment.yml
           condarc: |
             channels:
               - conda-forge
