Replace YAML linebreak | with >-
Xref https://stackoverflow.com/questions/3790454/how-do-i-break-a-string-in-yaml-over-multiple-lines/21699210#21699210

--- a/.github/workflows/ci_docs.yml
+++ b/.github/workflows/ci_docs.yml
@@ -77,7 +77,7 @@ jobs:
               - nodefaults
           cache-downloads: false
           cache-environment: false
-          create-args: |
+          create-args: >-
             python=3.11
             gmt=6.4.0
             numpy
