--- a/.github/workflows/ci_tests_dev.yaml
+++ b/.github/workflows/ci_tests_dev.yaml
@@ -101,7 +101,7 @@ jobs:
               - nodefaults
           cache-downloads: false
           cache-environment: false
-          create-args: |
+          create-args: >-
             python=3.11
             cmake
             make
