--- a/.github/workflows/cache_data.yaml
+++ b/.github/workflows/cache_data.yaml
@@ -43,7 +43,7 @@ jobs:
             channels:
               - conda-forge
               - nodefaults
-          create-args: |
+          create-args: >-
             python=3.11
             gmt=6.4.0
             numpy
