--- a/.github/workflows/ci_tests_legacy.yaml
+++ b/.github/workflows/ci_tests_legacy.yaml
@@ -64,7 +64,7 @@ jobs:
               - nodefaults
           cache-downloads: false
           cache-environment: false
-          create-args: |
+          create-args: >-
             python=3.9
             gmt=${{ matrix.gmt_version }}
             numpy
