Revert "Add extra space before optional contextily package"
This reverts commit 31b775fa3c42c1483312ea885c08df6092403ab6.

--- a/.github/workflows/ci_tests.yaml
+++ b/.github/workflows/ci_tests.yaml
@@ -67,8 +67,8 @@ jobs:
             optional-packages: ''
           - python-version: '3.11'
             numpy-version: '1.24'
-            optional-packages: >-
-               contextily
+            optional-packages: |
+              contextily
               geopandas
               ipython
               rioxarray
