Use environment-name instead of environment-file
Forgot that we don't use the environment.yml file

--- a/.github/workflows/ci_tests_dev.yaml
+++ b/.github/workflows/ci_tests_dev.yaml
@@ -93,7 +93,7 @@ jobs:
       - name: Setup Micromamba
         uses: mamba-org/setup-micromamba@v1.2.1
         with:
-          environment-file: environment.yml
+          environment-name: pygmt
           condarc: |
             channels:
               - conda-forge
