--- a/.github/workflows/ci_tests.yaml
+++ b/.github/workflows/ci_tests.yaml
@@ -67,12 +67,7 @@ jobs:
             optional-packages: ''
           - python-version: '3.11'
             numpy-version: '1.24'
-            optional-packages: >-
-               contextily
-              geopandas
-              ipython
-              rioxarray
-              sphinx-gallery
+            optional-packages: ' contextily geopandas ipython rioxarray sphinx-gallery'               
 
     timeout-minutes: 30
     defaults:
