Revert "Temporarily disable cache"
This reverts commit a6b19f741ed3a2f50c2494b912186b0805034897.

--- a/.github/workflows/ci_tests_dev.yaml
+++ b/.github/workflows/ci_tests_dev.yaml
@@ -98,8 +98,8 @@ jobs:
             channels:
               - conda-forge
               - nodefaults
-          cache-downloads: false
-          cache-environment: false
+          cache-downloads: true
+          cache-environment: true
           create-args: >-
             python=3.11
             cmake
