--- a/.github/workflows/ci_docs.yml
+++ b/.github/workflows/ci_docs.yml
@@ -74,8 +74,8 @@ jobs:
             channels:
               - conda-forge
               - nodefaults
-          cache-downloads: false
-          cache-environment: false
+          cache-downloads: true
+          cache-environment: true
           create-args: >-
             python=3.11
             gmt=6.4.0
