--- a/.github/workflows/ci_tests_legacy.yaml
+++ b/.github/workflows/ci_tests_legacy.yaml
@@ -61,8 +61,8 @@ jobs:
             channels:
               - conda-forge
               - nodefaults
-          cache-downloads: false
-          cache-environment: false
+          cache-downloads: true
+          cache-environment: true
           create-args: >-
             python=3.9
             gmt=${{ matrix.gmt_version }}
