List installed packages from micromamba
Reverts 69bb40d92810a65b04035cd67c016887eb1679b9 in #2435.

--- a/.github/workflows/cache_data.yaml
+++ b/.github/workflows/cache_data.yaml
@@ -52,6 +52,10 @@ jobs:
             packaging
             build
 
+      # Show installed pkg information for postmortem diagnostic
+      - name: List installed packages
+        run: mamba list
+
       # Install the package that we want to test
       - name: Install the package
         run: |
