--- a/.github/workflows/ci_tests_dev.yaml
+++ b/.github/workflows/ci_tests_dev.yaml
@@ -118,6 +118,10 @@ jobs:
             zlib
             geopandas
 
+      # Show installed pkg information for postmortem diagnostic
+      - name: List installed packages
+        run: mamba list
+
       # Install dependencies from PyPI
       - name: Install dependencies
         run: |
