--- a/.github/workflows/ci_tests.yaml
+++ b/.github/workflows/ci_tests.yaml
@@ -67,7 +67,7 @@ jobs:
             optional-packages: ''
           - python-version: '3.11'
             numpy-version: '1.24'
-            optional-packages: ' contextily geopandas ipython rioxarray sphinx-gallery'               
+            optional-packages: ' contextily geopandas ipython rioxarray sphinx-gallery'
 
     timeout-minutes: 30
     defaults:
@@ -121,6 +121,10 @@ jobs:
             pytest-cov
             pytest-doctestplus
             pytest-mpl
+
+      # Show installed pkg information for postmortem diagnostic
+      - name: List installed packages
+        run: mamba list
 
       # Download cached remote files (artifacts) from GitHub
       - name: Download remote data from GitHub
