Migrate provision-with-micromamba to setup-micromamba (#2536)
The mamba-org/provision-with-micromamba GitHub Action is about to be deprecated in favour of https://github.com/mamba-org/setup-micromamba, see https://github.com/mamba-org/provision-with-micromamba/pull/122.

* Rename cache-env to cache-environment

Xref https://github.com/mamba-org/setup-micromamba/tree/v1.2.1#caching

* Replace channels with condarc

Xref https://github.com/mamba-org/setup-micromamba/tree/v1.2.1#custom-condarc-file

* Replace YAML linebreak | with >-

Xref https://stackoverflow.com/questions/3790454/how-do-i-break-a-string-in-yaml-over-multiple-lines/21699210#21699210

* Use environment-name instead of environment-file
* Try formatting as a single line with a leading space

* Bump to mamba-org/setup-micromamba 1.4.0 and remove micromamba list

---------

Co-authored-by: Dongdong Tian <seisman.info@gmail.com>

--- a/.github/workflows/ci_doctests.yaml
+++ b/.github/workflows/ci_doctests.yaml
@@ -40,13 +40,16 @@ jobs:
           # fetch all history so that setuptools-scm works
           fetch-depth: 0
 
+      # Install Micromamba with conda-forge dependencies
       - name: Setup Micromamba
-        uses: mamba-org/provision-with-micromamba@v15
+        uses: mamba-org/setup-micromamba@v1.4.0
         with:
           environment-name: pygmt
-          environment-file: false
-          channels: conda-forge,nodefaults
-          extra-specs: |
+          condarc: |
+            channels:
+              - conda-forge
+              - nodefaults
+          create-args: >-
             python=3.11
             gmt=6.4.0
             numpy
