--- a/.github/workflows/ci_tests.yaml
+++ b/.github/workflows/ci_tests.yaml
@@ -67,12 +67,7 @@ jobs:
             optional-packages: ''
           - python-version: '3.11'
             numpy-version: '1.24'
-            optional-packages: |
-              contextily
-              geopandas
-              ipython
-              rioxarray
-              sphinx-gallery
+            optional-packages: ' contextily geopandas ipython rioxarray sphinx-gallery'
 
     timeout-minutes: 30
     defaults:
@@ -99,23 +94,25 @@ jobs:
           # fetch all history so that setuptools-scm works
           fetch-depth: 0
 
+      # Install Micromamba with conda-forge dependencies
       - name: Setup Micromamba
-        uses: mamba-org/provision-with-micromamba@v15
+        uses: mamba-org/setup-micromamba@v1.4.0
         with:
           environment-name: pygmt
-          environment-file: false
-          channels: conda-forge,nodefaults
+          condarc: |
+            channels:
+              - conda-forge
+              - nodefaults
           cache-downloads: true
-          cache-env: true
-          extra-specs: |
-            python=${{ matrix.python-version }}
+          cache-environment: true
+          create-args: >-
+            python=${{ matrix.python-version }}${{ matrix.optional-packages }}
             gmt=6.4.0
             numpy=${{ matrix.numpy-version }}
             pandas
             xarray
             netCDF4
             packaging
-            ${{ matrix.optional-packages }}
             build
             dvc
             make
