--- a/.github/workflows/format-command.yml
+++ b/.github/workflows/format-command.yml
@@ -32,7 +32,7 @@ jobs:
       # Install formatting tools
       - name: Install formatting tools
         run: |
-          python -m pip install black blackdoc docformatter==1.5.1 flakeheaven isort
+          python -m pip install black blackdoc docformatter flakeheaven isort
           sudo apt-get install dos2unix
 
       # Run "make format" and commit the change to the PR branch
