--- a/.github/workflows/ci_docs.yml
+++ b/.github/workflows/ci_docs.yml
@@ -82,7 +82,7 @@ jobs:
             netCDF4
             packaging
             contextily
-            geopandas
+            geopandas!=0.13.0
             ipython
             rioxarray
             build
