--- a/ci/requirements/docs.yml
+++ b/ci/requirements/docs.yml
@@ -12,7 +12,7 @@ dependencies:
     - packaging
     # Optional dependencies
     - contextily
-    - geopandas
+    - geopandas!=0.13.0
     - ipython
     - rioxarray
     # Development dependencies (general)
