CI: Do not use geopandas 0.13.0 in docs (#2545)

--- a/.github/workflows/ci_docs.yml
+++ b/.github/workflows/ci_docs.yml
@@ -85,7 +85,7 @@ jobs:
             netCDF4
             packaging
             contextily
-            geopandas
+            geopandas!=0.13.0
             ipython
             rioxarray
             build
