--- a/.github/workflows/dvc-diff.yml
+++ b/.github/workflows/dvc-diff.yml
@@ -35,6 +35,12 @@ jobs:
     - name: Pull image data from cloud storage
       run: dvc pull --remote upstream
 
+    # workaround from https://github.com/iterative/cml/issues/1377
+    - name: Setup NodeJS
+      uses: actions/setup-node@v1
+      with:
+        node-version: '16'
+
     # Produce the markdown diff report, which should look like:
     # ## Summary of changed images
     #
