--- a/.github/workflows/ci_tests_legacy.yaml
+++ b/.github/workflows/ci_tests_legacy.yaml
@@ -75,6 +75,7 @@ jobs:
             geopandas
             ipython
             rioxarray
+            sphinx-gallery
             build
             dvc
             make
