Unpin geopandas 0.13.0 in CI docs build
The issue of reading zip files from URLs should have been resolved in geopandas>=0.13.1, see https://github.com/geopandas/geopandas/compare/v0.13.0...v0.13.2

--- a/ci/requirements/docs.yml
+++ b/ci/requirements/docs.yml
@@ -12,7 +12,7 @@ dependencies:
     - packaging
     # Optional dependencies
     - contextily
-    - geopandas!=0.13.0
+    - geopandas
     - ipython
     - rioxarray
     # Development dependencies (general)
