--- a/.github/workflows/ci_docs.yml
+++ b/.github/workflows/ci_docs.yml
@@ -85,7 +85,7 @@ jobs:
             netCDF4
             packaging
             contextily
-            geopandas!=0.13.0
+            geopandas
             ipython
             rioxarray
             build
