Set date_format to ISO8601 to silence pandas 2.0 UserWarning on read_csv (#2569)

--- a/.github/workflows/ci_tests_legacy.yaml
+++ b/.github/workflows/ci_tests_legacy.yaml
@@ -67,7 +67,7 @@ jobs:
             python=3.9
             gmt=${{ matrix.gmt_version }}
             numpy
-            pandas
+            pandas<2
             xarray
             netCDF4
             packaging
