CI: Install geopandas using pip in the "GMT Dev Tests" workflow (#2525)

--- a/.github/workflows/ci_tests_dev.yaml
+++ b/.github/workflows/ci_tests_dev.yaml
@@ -116,14 +116,13 @@ jobs:
             libnetcdf
             pcre
             zlib
-            geopandas
 
       # Install dependencies from PyPI
       - name: Install dependencies
         run: |
           python -m pip install --pre --prefer-binary \
                         numpy pandas xarray netCDF4 packaging \
-                        build contextily dvc ipython rioxarray \
+                        build contextily dvc geopandas ipython rioxarray \
                         'pytest>=6.0' pytest-cov pytest-doctestplus pytest-mpl \
                         sphinx-gallery
 
@@ -133,14 +132,6 @@ jobs:
 
       # Pull baseline image data from dvc remote (DAGsHub)
       - name: Pull baseline image data from dvc remote
-        if: github.event_name == 'schedule'
-        run: |
-          dvc pull
-          ls -lhR pygmt/tests/baseline/
-
-      # Pull baseline image data from dvc remote (DAGsHub)
-      - name: Pull baseline image data from dvc remote
-        if: github.event_name != 'schedule'
         run: |
           dvc pull
           ls -lhR pygmt/tests/baseline/
