Change Tests to Test
Xref #2571 and #2578

Co-Authored-By: Yvonne Fröhlich <94163266+yvonnefroehlich@users.noreply.github.com>

--- a/.github/workflows/ci_tests.yaml
+++ b/.github/workflows/ci_tests.yaml
@@ -1,4 +1,4 @@
-# Tests PyGMT on Linux/macOS/Windows
+# Test PyGMT on Linux/macOS/Windows
 #
 # This workflow runs regular PyGMT tests and uploads test coverage reports stored
 # in `.coverage.xml` to https://app.codecov.io/gh/GenericMappingTools/pygmt
