--- a/.github/workflows/ci_tests_legacy.yaml
+++ b/.github/workflows/ci_tests_legacy.yaml
@@ -1,4 +1,4 @@
-# Tests PyGMT with GMT legacy versions on Linux/macOS/Windows
+# Test PyGMT with GMT legacy versions on Linux/macOS/Windows
 #
 # This workflow runs regular PyGMT tests with GMT legacy versions. Due to the
 # minor baseline image changes between GMT versions, the workflow only runs
