Revert "Try treeless clone"
This reverts commit c8a34096d33dad452a30e2299001704e5840698f.

--- a/.github/workflows/ci_tests.yaml
+++ b/.github/workflows/ci_tests.yaml
@@ -89,8 +89,8 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4.1.0
         with:
-          # fetch all history with treeless clone so that setuptools-scm works
-          filter: tree:0
+          # fetch all history so that setuptools-scm works
+          fetch-depth: 0
 
       # Install Micromamba with conda-forge dependencies
       - name: Setup Micromamba
