Add 'geodatasets' as a dependency for docs and update the choropleth example

--- a/.github/workflows/ci_docs.yml
+++ b/.github/workflows/ci_docs.yml
@@ -108,6 +108,7 @@ jobs:
             make
             pip
             python-build
+            geodatasets
             myst-nb
             panel
             sphinx>=6.2
