--- a/ci/requirements/docs.yml
+++ b/ci/requirements/docs.yml
@@ -23,6 +23,7 @@ dependencies:
     - pip
     - python-build
     # Dev dependencies (building documentation)
+    - geodatasets
     - myst-nb
     - panel
     - sphinx>=6.2
