--- a/environment.yml
+++ b/environment.yml
@@ -35,6 +35,7 @@ dependencies:
     - pytest-doctestplus
     - pytest-mpl
     # Dev dependencies (building documentation)
+    - geodatasets
     - myst-nb
     - panel
     - sphinx>=6.2
