CI: Ensure no hyphens in Python file and directory names in the "Style Checks" workflow (#3703)

--- a/.github/workflows/style_checks.yaml
+++ b/.github/workflows/style_checks.yaml
@@ -52,3 +52,15 @@ jobs:
             rm output.txt
             exit $nfiles
           fi
+
+      - name: Ensure hyphens are not used in names of directories and Python files
+        run: |
+          git ls-files '*.py' | grep '-' > output.txt || true
+          git ls-tree -rd --name-only HEAD | grep '-' >> output.txt || true
+          nfiles=$(wc --lines output.txt | awk '{print $1}')
+          if [[ $nfiles > 0 ]]; then
+            echo "Following directories/files use hyphens in file names:"
+            cat output.txt
+            rm output.txt
+            exit $nfiles
+          fi
