Add ImageMagick needed by the sphinx.ext.imgconverter extension

--- a/.github/workflows/ci_docs.yml
+++ b/.github/workflows/ci_docs.yml
@@ -117,6 +117,7 @@ jobs:
             sphinx-design
             sphinx-gallery
             sphinx_rtd_theme<3.0
+            imagemagick
             tectonic
 
       # Download cached remote files (artifacts) from GitHub
