No need to list the files anymore

--- a/.github/workflows/ci_docs.yml
+++ b/.github/workflows/ci_docs.yml
@@ -142,9 +142,7 @@ jobs:
         run: make -C doc clean html
 
       - name: Build the PDF
-        run: |
-          make -C doc pdf
-          ls -lh doc/_build/latex/*
+        run:  make -C doc pdf
 
       # Temporarily upload the built PDF to the artifacts
       - name: Upload PDF to artifacts
