Try sphinxcontrib-svg2pdfconverter +  CairoSVG

--- a/.github/workflows/ci_docs.yml
+++ b/.github/workflows/ci_docs.yml
@@ -117,7 +117,7 @@ jobs:
             sphinx-design
             sphinx-gallery
             sphinx_rtd_theme<3.0
-            librsvg
+            cairosvg
             sphinxcontrib-svg2pdfconverter
             tectonic
 
