Remove two packages not needed on ReadTheDocs

--- a/ci/requirements/docs.yml
+++ b/ci/requirements/docs.yml
@@ -33,6 +33,5 @@ dependencies:
     - sphinx-gallery
     - sphinx_rtd_theme<3.0
     # Dev dependencies (building PDF documentation)
-    - cairosvg
+    # 'sphinxcontrib-svg2pdfconverter' is required since it's added to `extensions`.
     - sphinxcontrib-svg2pdfconverter
-    - tectonic
